engine/orangeml/orange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orangeml
  labels:
    name: orangeml
spec:
  selector:
    matchLabels:
      name: orangeml
  template:
    metadata:
      labels:
        name: orangeml
    spec:
      containers:
        - name: orangeml
          image: topiaas/orangeml:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
