engine/orangeml/orange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orangeml-service-0
spec:
  selector:
    name: orangeml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
