engine/orangeml/orange-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orangeml
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # - host: "topiaas.ml"
    - host: "dev.topiaas.ml"
      http:
        paths:
          - backend:
              service:
                name: orangeml-service-0
                port:
                  number: 80
            path: /orangeml-test-0/websockify
            pathType: Prefix
  tls:
    - hosts:
        # - "topiaas.ml"
        - "dev.topiaas.ml"
      secretName: topiaas-ml-tls
